# DroneControl

./: .gitignore  COMPLETE_SUMMARY.md  LICENSE  MANIFEST.in  QUICKREF.md  QUICK_REFERENCE.md  README.md  REORGANISATION.md  STRUCTURE.md  VISUAL_SCALING_CHANGES.md  publish.sh  pyproject.toml  requirements.txt  setup.py  test_visual_sizes.py
docs/: CRASH_DETECTION.md  DEVELOPMENT.md  INTERACTIVE_CAMERA_CONTROLS.md  PERFORMANCE_SUMMARY.md  PYGAME_RENDERER.md  README.md  RENDERING_DEBUG.md  RENDERING_FIX.md  RENDERING_OPTIMIZATION.md  SEQUENTIAL_WAYPOINT_ENV.md  TROUBLESHOOTING.md  VISUALIZATION.md
examples/: __init__.py  demo_interactive.py  demo_pygame_renderer.py  interactive_camera_demo.py  manual_control.py  random_agent.py  training.py
src/drone_env/: __init__.py  drone.py  env.py  renderer.py  renderer_pygame.py  rllib_compat.py  wind.py
tests/: __init__.py  debug_render.py  quick_perf_test.py  test_comprehensive.py  test_crash_detection.py  test_env.py  test_manual_control.py  test_minimal_render.py  test_observation_space.py  test_pygame_renderer.py  test_rendering.py  test_rendering_performance.py  test_ui.py  test_visual_observation_space.py  test_visualization.py
