[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-rl-env"
dynamic = ["version"]
description = "Gymnasium Environment for Quadcopter Control with Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Adrian Degenkolb"},
]
keywords = ["reinforcement-learning", "drone", "quadcopter", "gymnasium", "environment", "control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]
rl = ["ray[rllib]>=2.7.0", "torch>=2.0.0"]

[project.urls]
Homepage = "https://github.com/HansDampf37/DroneControl"
Repository = "https://github.com/HansDampf37/DroneControl"
"Bug Tracker" = "https://github.com/HansDampf37/DroneControl/issues"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "drone_env.__version__"}

